# dentalclinic

./: pyproject.toml  requirements.txt
DentalClinic/: manage.py  requirements.txt
DentalClinic/DentalClinic/: asgi.py  settings.py  urls.py  wsgi.py
DentalClinic/clinic/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
